pkg/i2gw/emitters/kgateway/testing/testdata/output/backend_tls.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: BackendConfigPolicy
metadata:
  name: httpbin-insecure-backend-config
  namespace: default
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: httpbin-insecure
  tls:
    insecureSkipVerify: true
    sni: tls.example.com
status:
  ancestors: null
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: BackendConfigPolicy
metadata:
  name: httpbin2-backend-config
  namespace: default
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: httpbin2
  tls:
    secretRef:
      name: base-certificate-tls
    sni: tls.example.com
status:
  ancestors: null
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: kgateway
  listeners:
    - hostname: insecure-tls.example.org
      name: insecure-tls-example-org-http
      port: 80
      protocol: HTTP
    - hostname: tls.example.org
      name: tls-example-org-http
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-backendtls-tls-example-org
  namespace: default
spec:
  hostnames:
    - tls.example.org
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - name: httpbin2
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-backendtls-verify-off-insecure-tls-example-org
  namespace: default
spec:
  hostnames:
    - insecure-tls.example.org
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - name: httpbin-insecure
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
status:
  parents: []
