pkg/i2gw/emitters/kgateway/testing/testdata/output/external_auth.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: nginx
  namespace: default
spec:
  gatewayClassName: kgateway
  listeners:
    - hostname: app1.example.org
      name: app1-example-org-http
      port: 80
      protocol: HTTP
    - hostname: app3.example.org
      name: app3-example-org-http
      port: 80
      protocol: HTTP
    - hostname: app4.example.org
      name: app4-example-org-http
      port: 80
      protocol: HTTP
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: GatewayExtension
metadata:
  name: ingress-auth-different-ns-extauth
  namespace: default
spec:
  extAuth:
    httpService:
      backendRef:
        name: auth
        namespace: production
        port: 8080
      pathPrefix: /authz
status: {}
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: GatewayExtension
metadata:
  name: ingress-auth-full-fqdn-extauth
  namespace: default
spec:
  extAuth:
    httpService:
      authorizationResponse:
        headersToBackend:
          - X-Auth-Token
          - X-User-ID
      backendRef:
        name: auth
        namespace: default
        port: 80
status: {}
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: GatewayExtension
metadata:
  name: ingress-auth-same-ns-extauth
  namespace: default
spec:
  extAuth:
    httpService:
      backendRef:
        name: auth
        namespace: default
        port: 80
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: ingress-auth-different-ns-app4-example-org
  namespace: default
spec:
  hostnames:
    - app4.example.org
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - name: app4
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
      name: rule-0
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: ingress-auth-full-fqdn-app1-example-org
  namespace: default
spec:
  hostnames:
    - app1.example.org
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - name: app1
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
      name: rule-0
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: ingress-auth-same-ns-app3-example-org
  namespace: default
spec:
  hostnames:
    - app3.example.org
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - name: app3
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
      name: rule-0
status:
  parents: []
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: ingress-auth-different-ns
  namespace: default
spec:
  extAuth:
    extensionRef:
      name: ingress-auth-different-ns-extauth
      namespace: default
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: ingress-auth-different-ns-app4-example-org
status:
  ancestors: null
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: ingress-auth-full-fqdn
  namespace: default
spec:
  extAuth:
    extensionRef:
      name: ingress-auth-full-fqdn-extauth
      namespace: default
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: ingress-auth-full-fqdn-app1-example-org
status:
  ancestors: null
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: ingress-auth-same-ns
  namespace: default
spec:
  extAuth:
    extensionRef:
      name: ingress-auth-same-ns-extauth
      namespace: default
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: ingress-auth-same-ns-app3-example-org
status:
  ancestors: null
