pkg/i2gw/emitters/kgateway/testing/testdata/output/golden.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: kgateway
  listeners:
  - hostname: myservicea.foo.org
    name: myservicea-foo-org-http
    port: 80
    protocol: HTTP
  - hostname: myserviceb.foo.org
    name: myserviceb-foo-org-http
    port: 80
    protocol: HTTP
  - hostname: tls.example.org
    name: tls-example-org-http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-backendtls-tls-example-org
  namespace: default
spec:
  hostnames:
  - tls.example.org
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: httpbin2
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-myservicea1-myservicea-foo-org
  namespace: default
spec:
  hostnames:
  - myservicea.foo.org
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - filters:
      - extensionRef:
          group: gateway.kgateway.dev
          kind: TrafficPolicy
          name: ingress-myservicea1
        type: ExtensionRef
      name: myservicea
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
  - backendRefs:
    - filters:
      - extensionRef:
          group: gateway.kgateway.dev
          kind: TrafficPolicy
          name: ingress-myservicea2
        type: ExtensionRef
      name: myservicea
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /2
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-myserviceb-myserviceb-foo-org
  namespace: default
spec:
  hostnames:
  - myserviceb.foo.org
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: myserviceb
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: []
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: BackendConfigPolicy
metadata:
  name: httpbin2-backend-config
  namespace: default
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: httpbin2
  tls:
    secretRef:
      name: base-certificate-tls
    sni: tls.example.com
status:
  ancestors: null
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: HTTPListenerPolicy
metadata:
  name: nginx-access-log
  namespace: default
spec:
  accessLog:
  - fileSink:
      path: /dev/stdout
      stringFormat: '[%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%
        %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT%
        %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%"
        "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%"%n'
  targetRefs:
  - group: ""
    kind: Gateway
    name: nginx
status:
  ancestors: null
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: ingress-myservicea1
  namespace: default
spec:
  buffer:
    maxRequestSize: 10m
  rateLimit:
    local:
      tokenBucket:
        fillInterval: 1m0s
        maxTokens: 600
        tokensPerFill: 600
status:
  ancestors: null
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: ingress-myservicea2
  namespace: default
spec:
  buffer:
    maxRequestSize: 20m
  rateLimit:
    local:
      tokenBucket:
        fillInterval: 1s
        maxTokens: 10
        tokensPerFill: 10
status:
  ancestors: null
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: ingress-myserviceb
  namespace: default
spec:
  buffer:
    maxRequestSize: 100m
  rateLimit:
    local:
      tokenBucket:
        fillInterval: 1s
        maxTokens: 250
        tokensPerFill: 50
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: ingress-myserviceb-myserviceb-foo-org
status:
  ancestors: null
