pkg/i2gw/emitters/kgateway/testing/testdata/output/rewrite_target_use_regex.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: kgateway
  listeners:
    - hostname: myservicea.foo.org
      name: myservicea-foo-org-http
      port: 80
      protocol: HTTP
    - hostname: myserviceb.foo.org
      name: myserviceb-foo-org-http
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-myservicea1-myservicea-foo-org
  namespace: default
spec:
  hostnames:
    - myservicea.foo.org
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - name: myservicea
          port: 80
      matches:
        - path:
            type: RegularExpression
            value: (?i)/foo/(.*).*
      name: rule-0
    - backendRefs:
        - name: myservicea
          port: 80
      matches:
        - path:
            type: RegularExpression
            value: (?i)/v1.+.*
      name: rule-1
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-myserviceb-myserviceb-foo-org
  namespace: default
spec:
  hostnames:
    - myserviceb.foo.org
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - name: myserviceb
          port: 80
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              replaceFullPath: /rewritten
              type: ReplaceFullPath
      matches:
        - path:
            type: RegularExpression
            value: (?i)/.*
      name: rule-0
status:
  parents: []
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: ingress-myservicea1-myservicea-foo-org-0
  namespace: default
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: ingress-myservicea1-myservicea-foo-org
      sectionName: rule-0
  urlRewrite:
    pathRegex:
      pattern: (?i)/foo/(.*).*
      substitution: /$1
status:
  ancestors: null
