pkg/i2gw/emitters/kgateway/testing/testdata/output/ssl_redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: kgateway
  listeners:
    - hostname: force-redirect.example
      name: force-redirect-example-http
      port: 80
      protocol: HTTP
    - hostname: force-redirect.example
      name: force-redirect-example-https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: force-redirect-tls
    - hostname: redirect.example
      name: redirect-example-http
      port: 80
      protocol: HTTP
    - hostname: redirect.example
      name: redirect-example-https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: redirect-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-force-ssl-redirect-force-redirect-example
  namespace: default
spec:
  hostnames:
    - force-redirect.example
  parentRefs:
    - name: nginx
      port: 443
  rules:
    - backendRefs:
        - name: myservice2
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
      name: rule-0
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-force-ssl-redirect-force-redirect-example-http
  namespace: default
spec:
  hostnames:
    - force-redirect.example
  parentRefs:
    - name: nginx
      port: 80
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 308
          type: RequestRedirect
      matches:
        - path:
            type: PathPrefix
            value: /
status:
  parents: null
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-ssl-redirect-redirect-example
  namespace: default
spec:
  hostnames:
    - redirect.example
  parentRefs:
    - name: nginx
      port: 443
  rules:
    - backendRefs:
        - name: myservice
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
      name: rule-0
    - backendRefs:
        - name: myservice
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /api
      name: rule-1
    - backendRefs:
        - name: myservice
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /web
      name: rule-2
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-ssl-redirect-redirect-example-http
  namespace: default
spec:
  hostnames:
    - redirect.example
  parentRefs:
    - name: nginx
      port: 80
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 308
          type: RequestRedirect
      matches:
        - path:
            type: PathPrefix
            value: /
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 308
          type: RequestRedirect
      matches:
        - path:
            type: PathPrefix
            value: /api
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 308
          type: RequestRedirect
      matches:
        - path:
            type: PathPrefix
            value: /web
status:
  parents: null
