pkg/i2gw/emitters/kgateway/testing/testdata/output/use_regex_session_affinity.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: BackendConfigPolicy
metadata:
  name: myservicea-backend-config
  namespace: default
spec:
  loadBalancer:
    ringHash:
      hashPolicies:
        - cookie:
            name: session-id
            path: /api
  targetRefs:
    - group: ""
      kind: Service
      name: myservicea
status:
  ancestors: null
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: nginx
  namespace: default
spec:
  gatewayClassName: kgateway
  listeners:
    - hostname: myservicea.foo.org
      name: myservicea-foo-org-http
      port: 80
      protocol: HTTP
    - hostname: myserviceb.foo.org
      name: myserviceb-foo-org-http
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: ingress-myservicea1-myservicea-foo-org
  namespace: default
spec:
  hostnames:
    - myservicea.foo.org
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - name: myservicea
          port: 80
      matches:
        - path:
            type: RegularExpression
            value: (?i)/path/one.*
      name: rule-0
    - backendRefs:
        - name: myservicea
          port: 80
      matches:
        - path:
            type: RegularExpression
            value: (?i)/path/two.*
      name: rule-1
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: ingress-myserviceb-myserviceb-foo-org
  namespace: default
spec:
  hostnames:
    - myserviceb.foo.org
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - name: myserviceb
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
      name: rule-0
status:
  parents: []
